--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -2,6 +2,21 @@
 {% load static %}
 {% load bootstrap4 %}
 {% load widget_tweaks %}
+{% block page_head %}
+<style>
+.hiddenTabs {
+    display : none;
+}
+.visibleTabs {
+    display : block;
+}
+.tab{
+    cursor : pointer;
+}
+</style>
+
+{% endblock page_head %}
+
 {% block page_header %}
 <div class="body_1">
     {% if user.is_authenticated %}
@@ -37,8 +52,21 @@
 
         {% if group == 'Teacher' %}
 
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active tab" id="yourTab">Your Classes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link tab" id="subTab">Subjects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link tab" id="roomTab">Class Room</a>
+            </li>
+        </ul>
+
+            <div id='yourClasses' class='visibleTabs'>
+            <br/>
             <h5>Engage Classes</h5>
-            <div class='yourClasses'>
             <form action="{% url 'faceapp:index'%}" method="POST" id='engageForm'>
                 {% csrf_token %}
                 {% bootstrap_form engageClassesForm layout="horizontal" %}
@@ -46,6 +74,7 @@
                 <input type='hidden' name='next' value="{% url 'faceapp:index' %}"/>
                 <button class='btn btn-danger' id='disengageClass'>Disengage Class</button>
             </form>
+            <br/>
             <h5>Available Classes</h5>
              
             {% if classes|length == 0 %}
@@ -75,8 +104,9 @@
             {% endif %}
             </div>
 
+            <div id="subjects" class='hiddenTabs'>
+            <br/>
             <h5>Add Subjects</h5>
-            <div class="subjects">
             <form action="{% url 'faceapp:index'%}" method="POST">
                 {% csrf_token %}
                 {% render_field addSubjectsForm.name placeholder="Subject" %}
@@ -97,30 +127,30 @@
             {% endif %}
             </div>
             
-            <h5>Add ClassRooms</h5>
-            <div class="classRooms">
-            <form action="{% url 'faceapp:index'%}" method="POST">
-                {% csrf_token %}
-                {% render_field addClassRoomsForm.classRoom placeholder='Class Room' %}
-                <button name="submit" class='btn btn-primary'>Add ClassRoom</button>
-                <input type='hidden' name='addClass'/>
-            </form>
-            {% if classRooms|length == 0 %}
-            No Class Rooms.
-            {% else %}
-            <table>
-            <th>ClassRooms</th>
-            {% for classRoom in classRooms %}
-               <tr><td><a>{{classRoom}}</a></td></tr>
-            {% endfor %}
-            </table>
-            {% endif %}
+            
+            <div id="classRooms" class='hiddenTabs'>
+                <br/>
+                <h5>Add ClassRooms</h5>
+                <form action="{% url 'faceapp:index'%}" method="POST">
+                    {% csrf_token %}
+                    {% render_field addClassRoomsForm.classRoom placeholder='Class Room' %}
+                    <button name="submit" class='btn btn-primary'>Add ClassRoom</button>
+                    <input type='hidden' name='addClass'/>
+                </form>
+                {% if classRooms|length == 0 %}
+                No Class Rooms.
+                {% else %}
+                <table>
+                    <th>ClassRooms</th>
+                    {% for classRoom in classRooms %}
+                    <tr><td><a>{{classRoom}}</a></td></tr>
+                    {% endfor %}
+                </table>
+                {% endif %}
             </div>
         {% elif group == 'Student' %}
 
         {% endif %}
-        </div>
-        </div>
     </div>
     <div class="card">
         <div class="card-header" id="headingTwo">
@@ -275,6 +305,23 @@ $("#add").click(function(event){
     $("#addSubject").val('1');
 });
 
+$("#yourTab").click(function(){
+    $("#yourClasses").attr('class','visibleTabs');
+    $("#subjects").attr('class','hiddenTabs');
+    $("#classRooms").attr('class','hiddenTabs');    
+});
+
+$("#subTab").click(function(){
+    $("#yourClasses").attr('class','hiddenTabs');
+    $("#subjects").attr('class','visibleTabs');
+    $("#classRooms").attr('class','hiddenTabs');    
+});
+
+$("#roomTab").click(function(){
+    $("#yourClasses").attr('class','hiddenTabs');
+    $("#subjects").attr('class','hiddenTabs');
+    $("#classRooms").attr('class','visibleTabs');    
+});
 </script>
 {% endif %}
 
