Corrected misplaced div tags

--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -56,17 +56,17 @@ ul.errorlist{
 
         {% if group == 'Teacher' %}
 
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link tab" id="yourTab">Your Classes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link tab" id="subTab">Subjects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link tab" id="roomTab">Class Room</a>
-            </li>
-        </ul>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link tab" id="yourTab">Your Classes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link tab" id="subTab">Subjects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link tab" id="roomTab">Class Room</a>
+                </li>
+            </ul>
 
             <div id='yourClasses' class='hiddenTabs'>
             <br/>
@@ -161,6 +161,12 @@ ul.errorlist{
 
         {% endif %}
     </div>
+
+</div>
+</div>
+
+
+
     <div class="card">
         <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
@@ -185,6 +191,10 @@ ul.errorlist{
         </div>
         </div>
     </div>
+
+
+
+
     <div class="card">
         <div class="card-header" id="headingThree">
         <h5 class="mb-0">
